@@ -63,6 +63,7 @@ Bugs fixed
 - Bug 2873 - tcp: Potential SIGFPE in TcpYeah
 - Bug 2874 - tcp: Corrected interpretation of RFC 6675 for IsLost check
 - Bug 2875 - tcp: Use Rule3 of RFC6675 only with SACK enabled
+- Bug 2876 - tcp: Do not shrink adv window after we send the FIN
 - Bug 2877 - wifi: Wrong data types for CWmin and CWmax
 
 Known issues
